# uvracing-xyz

./: .gitignore  Anchor.toml  Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json
.agents/skills/privy/: SKILL.md
.skills/: cargo-specifics.md  privy.skill
app/: next.config.ts  package.json  pnpm-lock.yaml  prisma.config.ts  tailwind.config.ts
app/prisma/: schema.prisma
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/(app)/: layout.tsx
app/src/app/(app)/admin/: page.tsx
app/src/components/auth/: EnsureEmbeddedSolanaWallet.tsx
app/src/components/debug/: WalletDebugPanel.tsx
app/src/components/layout/: AppShell.tsx  Sidebar.tsx
app/src/components/trade/: TradeChat.tsx
app/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  progress.tsx  select.tsx  separator.tsx  sheet.tsx  tabs.tsx  tooltip.tsx
app/src/hooks/: useEscrow.ts  useTrade.ts
app/src/lib/: constants.ts  ledger.ts  reputation.ts  risk.ts  utils.ts
app/src/lib/api/: validation.ts
app/src/lib/auth/: withAuth.ts
app/src/lib/db/: prisma.ts  tradeNumber.ts
app/src/lib/solana/: escrow.ts  idl.json  program.ts  verify.ts  witness.ts
app/src/lib/telegram/: bot.ts  notifications.ts
app/src/prisma/: schema.prisma
app/src/providers/: PrivyProvider.tsx  index.tsx
app/src/types/: index.ts
migrations/: deploy.js
programs/tradeos/: Cargo.toml
programs/tradeos/src/: errors.rs  escrow.rs  lib.rs  milestone.rs  state.rs
programs/tradeos/src/instructions/: dispute.rs  fund.rs  initialize.rs  mod.rs  refund.rs  release.rs  resolve.rs
(+30 files in other folders)
