[package]
name = "tradeos"
version = "0.1.0"
description = "TradeOS escrow program - West Africa UAE corridor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tradeos"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = "1.0.0"